--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
             </intent-filter>
             <meta-data android:name="android.app.searchable"
                 android:resource="@xml/searchable"/>
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".PhotoGalleryActivity" />
         </activity>
     </application>
 
