--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
                 android:name="android.app.default_searchable"
                 android:value=".PhotoGalleryActivity" />
         </activity>
+        <service android:name=".PollService" />
     </application>
 
 </manifest>
