Registered intent filter for broadcast receiver

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
                 android:value=".PhotoGalleryActivity" />
         </activity>
         <service android:name=".PollService" />
+        <receiver android:name=".StartupReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/> </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
