--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,14 @@
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/> </intent-filter>
         </receiver>
+        <receiver android:name=".NotificationReceiver"
+            android:exported="false">
+            <intent-filter
+                android:priority="-999">
+                <action
+                    android:name="apps.baveltman.photogallery.SHOW_NOTIFICATION"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
