Let activity handle configuration change for certain configs to prevent reloading webview for those config changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
         </activity>
 
         <activity
-            android:name=".PhotoPageActivity" />
+            android:name=".PhotoPageActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"/>
 
         <service android:name=".PollService" />
 
